--- a/Front-End/expense-tracker.css
+++ b/Front-End/expense-tracker.css
@@ -58,14 +58,30 @@ body, h1, h2, h3, p {
     padding: 0;
 }
 
+.list-group {
+    list-style: none;
+    padding: 0;
+}
+
 .list-group li {
     background-color: #f5f5f5;
     padding: 10px;
     border: 1px solid #ddd;
     margin-top: 5px;
     position: relative;
-    display: flex; /* Add this line to use flex layout */
-    align-items: center; /* Center items vertically */
+}
+
+.list-group li .item-info {
+   flex :auto
+}
+
+.list-group li .button-group {
+    position: absolute;
+    right: 30px;
+    top: 50%;
+    transform: translateY(-50%);
+    display: flex;
+    align-items: center;
 }
 
 .list-group li button {
@@ -75,5 +91,7 @@ body, h1, h2, h3, p {
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    margin-left: auto; /* Push the buttons to the right */
+    margin-left: 10px;
+    margin-right: 4px;
 }
+
