--- a/Front-End/expense-tracker.css
+++ b/Front-End/expense-tracker.css
@@ -86,7 +86,7 @@ body, h1, h2, h3, p {
 
 .list-group li button {
     padding: 5px 10px;
-    background-color: #e74c3c;
+    background-color: #e9200a;
     color: white;
     border: none;
     border-radius: 4px;
